--- a/iframe.html
+++ b/iframe.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="/styles/iframe_styles.css">
 </head>
 <main class="main"></main>
-
 <body>
+    <h1 style="font-size: xx-large;">Set your preferences here</h1>
     <table>
         <thead>
             <tr>
@@ -64,9 +63,9 @@
             </tr>
             <tr>
                 <td><label><input type="radio" name="loyalty" value="0"> Don't preserve loyalty</label></td>
-                <td><label><input type="radio" name="loyalty" value="2"> Preserve if not silver</label></td>
             </tr>
             <tr>
+                <td><label><input type="radio" name="loyalty" value="2"> Preserve if not silver</label></td>
                 <td><label><input type="radio" name="loyalty" value="3"> Preserve if not gold</label></td>
                 <td><label><input type="radio" name="loyalty" value="4"> Preserve if not diamond</label></td>
                 <td></td>
@@ -75,7 +74,7 @@
                 <td><label><input type="radio" name="potion" value="0"> No potions</label></td>
                 <td><label><input type="radio" name="potion" value="1"> Potions at 45</label></td>
                 <td><label><input type="radio" name="potion" value="2"> Potions at 100</label></td>
-            </tr>s
+            </tr>
         </tbody>
     </table>
 </body>
