--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="button_container">
+        <button id="iframe_button" class="green_button">Open settings</button>
         <button id="instructions_button" class="green_button">Instructions</button>
         <button id="log_button" class="green_button">Log</button>
         <button id="whitelist_button" class="green_button">Whitelist</button>
