Support for priority units

--- a/html/units.html
+++ b/html/units.html
@@ -18,7 +18,7 @@
         <div style="text-align: left; align-items: center; padding-left: 20%; padding-right: 10%; font-size: medium; font-weight: bold">
             <ul>
                 <li>Enable priority list on the settings</li>
-                <li>Make sure the unit selector are still enabled accordingly</li>
+                <li>Make sure the unit selectors (common, uncommon, rare and legendary) are enabled accordingly otherwise the priority unit will be ignored</li>
                 <li>Placement of a priority unit will depend on marker and cooldown availability</li>
                 <li>Priority 0: Completely ignores the unit, even if there are no other units available.</li>
                 <li>Priority 1: Highest priority.</li>
