--- a/iframe.html
+++ b/iframe.html
@@ -43,7 +43,7 @@
                 <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
             </tr>
             <tr>
-                <td style="color: red;"><label for="priorityListSwitch"><input type="checkbox" id="priorityListSwitch">Enable priority
+                <td><label for="priorityListSwitch"><input type="checkbox" id="priorityListSwitch">Enable priority
                         list</label>
                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label></td>
                 <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label>
