Map node updater

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
         <button id="log_button" class="green_button">Log</button>
         <button id="unit_button" class="green_button">Units</button>
         <button id="instructions_button" class="green_button">Instructions</button>
+        <button id="map_updater" class="green_button">Update Maps</button>
     </div>
 </body>
 
