Changed ambiguious instructions

--- a/html/map_updater.html
+++ b/html/map_updater.html
@@ -17,9 +17,10 @@
         <li>Right-click and select Inspect Elements</li>
         <li>Go to the Network tab</li>
         <li>Search for "data.". It will look like this: data.xxxxxxx.json</li>
-        <li>Copy the link</li>
-        <li>Download the JSON file</li>
-        <li>Replace the downloaded loyalty_chests.json file on the /extension_folder/icons</li>
+        <li>Copy the link and insert on the box below</li>
+        <li>Select the downloaded json file on the button bellow</li>
+        <li>It will download a new formatted file called loyalty_chests.json.</li>
+        <li>Replace the old file with the new file at /extension_folder/icons/loyalty_chests.chest</li>
         <li>Your map nodes are now up to date.</li>
     </ul>
     <form id="transformForm">
