--- a/html/map_updater.html
+++ b/html/map_updater.html
@@ -17,6 +17,8 @@
         <li>Right-click and select Inspect Elements</li>
         <li>Go to the Network tab</li>
         <li>Search for "data.". It will look like this: data.xxxxxxx.json</li>
+        <li>Download the file with the link you copied</li>
+        <br>
         <li>Copy the link and insert on the box below</li>
         <li>Select the downloaded json file on the button bellow</li>
         <li>It will download a new formatted file called loyalty_chests.json.</li>
