Split html and js

--- a/html/map_updater.html
+++ b/html/map_updater.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map Node updater</title>
+    <script src="/javascript/updater.js"></script>
 </head>
 
 <body>
@@ -36,57 +37,6 @@
         <button type="button" onclick="transformJson()">Download formatted JSON</button>
     </form>
     <pre id="transformedJson"></pre>
-
-    <script>
-        async function transformJson() {
-            const urlInput = document.getElementById('urlInput').value;
-            const jsonFileInput = document.getElementById('jsonFileInput').files[0];
-
-            try {
-                const jsonData = await readFileAsync(jsonFileInput);
-                const parsedJson = JSON.parse(jsonData);
-
-                //Extract MapNodes from the json
-                const mapNodes = parsedJson.sheets.MapNodes;
-
-                //Remove unwanted keys from each map node
-                for (const nodeKey in mapNodes) {
-                    const node = mapNodes[nodeKey];
-                    for (const keyToRemove of ["NodeDifficulty", "MapTags", "OnLoseDialog", "OnStartDialog", "OnWinDialog"]) {
-                        delete node[keyToRemove];
-                    }
-                }
-
-                //Create the transformed JSON
-                const transformedJson = {
-                    url: urlInput,
-                    MapNodes: mapNodes
-                };
-
-                //Convert the JSON to a Blob
-                const blob = new Blob([JSON.stringify(transformedJson, null, 2)], { type: 'application/json' });
-
-                //Create a download link
-                const downloadLink = document.createElement('a');
-                downloadLink.href = URL.createObjectURL(blob);
-                downloadLink.download = 'loyalty_chests.json';
-
-                //Trigger the download
-                downloadLink.click();
-            } catch (error) {
-                console.error(error.message);
-            }
-        }
-
-        function readFileAsync(file) {
-            return new Promise((resolve, reject) => {
-                const reader = new FileReader();
-                reader.onload = (event) => resolve(event.target.result);
-                reader.onerror = (error) => reject(error);
-                reader.readAsText(file);
-            });
-        }
-    </script>
 
 </body>
 
