--- a/html/how_to_play.html
+++ b/html/how_to_play.html
@@ -23,6 +23,10 @@
             <td>Due to memory and caching, the game eventually becomes unstable and unresponsive until the tab unrecoverably crashes. To mitigate this effect, set a period in minutes for the website's page to automatically refresh so the game is cleared from memory. Default is 60 minutes.</td>
         </tr>
         <tr>
+            <td>UPDATE MAP!!</td>
+            <td>If are you playing with loyalty preservation ON you will see the warning "UPDATE MAP!!" on the top header of the game whenever there's a game update. Go to the extension icon and click Update Maps, follow the instructions there to update the maps. If you are not preserving loyalty this warning can be ignored, after updating the map the warning goes away after the first loyalty battle.</td>
+        </tr>
+        <tr>
             <td>Switch idle captain: It will always switch to a
                 campaign captain</td>
             <td>Switch idle captain after 15 minutes, the idle states are: if a captain doesn't find a battle, doesn't
@@ -102,23 +106,23 @@
         </tr>
         <tr>
             <td>Don't preserve loyalty</td>
-            <td>Switch to a captain regardless of loyalty.</td>
+            <td>Switch or place with a captain regardless of loyalty.</td>
         </tr>
         <tr>
             <td>Preserve bronze loyalty</td>
-            <td>Switch to ac aptain if they are at least bronze.</td>
+            <td>Switch or place with a captain if they are at least bronze.</td>
         </tr>
         <tr>
             <td>Preserve silver loyalty</td>
-            <td>Switch to a captain if they are at least silver.</td>
+            <td>Switch or place with a captain if they are at least silver.</td>
         </tr>
         <tr>
             <td>Preserve gold loyalty</td>
-            <td>Switch to a  captain if they are at least gold.</td>
+            <td>Switch or place with a captain if they are at least gold.</td>
         </tr>
         <tr>
             <td>Preserve diamond loyalty</td>
-            <td>Switch to a captain if they are at least diamond.</td>
+            <td>Switch or place with a captain if they are at least diamond.</td>
         </tr>
         <tr>
             <td colspan="2" style="font-size: 18px; text-align: center;"><b>Live captains and Masterlist</b></td>
@@ -136,7 +140,7 @@
         </tr>
         <tr>
             <td>Prioritize masterlist on idle switch</td>
-            <td>Masterlist will have priority over diamond, gold, silver, bronze, whitelist and favorite list.</td>
+            <td>Masterlist will have priority over diamond, gold, silver, bronze, allowlist and favorite list.</td>
         </tr>
         <tr>
             <td>Skip idle switch if no masterlist is online</td>
@@ -146,7 +150,7 @@
             <td colspan="2" style="font-size: 18px; text-align: center;"><b>Epic units/Potion usage</b></td>
         </tr>
         <tr>
-            <td>Potion whitelist</td>
+            <td>Potion allowlist</td>
             <td>Use potions only if the captain is potionlisted. Potion usage must be set to 45 or 100.</td>
         </tr>
         <tr>
