--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -13,12 +13,12 @@
     <div class="bulleted-list">
         <h1>Set you priority captains lists</h1>
         <ul>
-            <li>When switching an idle captain the order of priority is: Masterlist (if enabled to do so) > Diamond > Gold > Silver > Bronze > Whitelist >
+            <li>When switching an idle captain the order of priority is: Masterlist (if enabled to do so) > Diamond > Gold > Silver > Bronze > Allowlist >
                 Favorites > Any captain</li>
-            <li>Blacklisted captains will be ignored, unless they are the only ones in the Any Captains list.</li>
+            <li>Blocklisted captains will be ignored, unless they are the only ones in the Any Captains list.</li>
             <li>Write the name of the Captains with a space in between</li>
             <li>The order you write the captains is the order of their priority</li>
-            <li>When you blacklist a captain, make sure they are not in the in-game favorites list</li>
+            <li>When you blocklist a captain, make sure they are not in the in-game favorites list</li>
             <li>Uppercasing and lowercasing don't matter, but the captain name MUST be typed correctly (e.g CaptainZ1,
                 captainz1, CAPTAINZ1 are all valid because their only difference is the casing)</li>
             <li><b>Masterlist has two states and bypass priority, read instructions</b></li>
@@ -27,13 +27,13 @@
             <label>Masterlist:</label><br>
             <textarea id="masterlist" name="masterlist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
             <br>
-            <label>Whitelist:</label><br>
+            <label>Allowlist:</label><br>
             <textarea id="whitelist" name="whitelist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
             <br>
-            <label>Blacklist:</label><br>
+            <label>Blocklist:</label><br>
             <textarea id="blacklist" name="blacklist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
             <br>
-            <label>Potion whitelist (ENABLE ON THE SETTINGS):</label><br>
+            <label>Potion allowlist (ENABLE ON THE SETTINGS):</label><br>
             <textarea id="potionlist" name="potionlist"
                 placeholder="captain1 captain2 captain3 captain4"></textarea><br>
         </div>
