--- a/iframe.html
+++ b/iframe.html
@@ -81,7 +81,7 @@
                 <td><label><input type="radio" name="loyalty" value="4"> Preserve if not diamond</label></td>
             </tr>
             <tr>
-                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions whitelist
+                <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions allowlist
                         only</label></td>
                 <td><label><input type="radio" name="potion" value="0"> No potions</label></td>
                 <td><label><input type="radio" name="potion" value="1"> Potions at 45</label></td>
