--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="button_container">
         <button id="iframe_button" class="green_button">Open settings</button>
-        <button id="whitelist_button" class="green_button">Whitelist</button>
+        <button id="whitelist_button" class="green_button">Filter lists</button>
         <button id="log_button" class="green_button">Log</button>
         <button id="unit_button" class="green_button">Units</button>
         <button id="instructions_button" class="green_button">Instructions</button>
