--- a/iframe.html
+++ b/iframe.html
@@ -74,6 +74,10 @@
                         if no masterlist is online</label></td>
             </tr>
             <tr>
+                <td><label for="afterSwitch"><input type="checkbox" id="afterSwitch"> Enable slot after leave after</label></td>
+                <td><label for="beforeSwitch"><input type="checkbox" id="beforeSwitch"> Enable slot after leave before</label></td>
+            </tr>
+            <tr>
                 <td><label><input type="radio" name="loyalty" value="0"> Don't preserve loyalty</label></td>
                 <td><label><input type="radio" name="loyalty" value="1"> Preserve if not bronze</label></td>
                 <td><label><input type="radio" name="loyalty" value="2"> Preserve if not silver</label></td>
