--- a/iframe.html
+++ b/iframe.html
@@ -74,8 +74,8 @@
                         if no masterlist is online</label></td>
             </tr>
             <tr>
-                <td><label for="afterSwitch"><input type="checkbox" id="afterSwitch"> Enable slot after leave after</label></td>
-                <td><label for="beforeSwitch"><input type="checkbox" id="beforeSwitch"> Enable slot after leave before</label></td>
+                <td><label for="afterSwitch"><input type="checkbox" id="afterSwitch"> Enable slot on leave after</label></td>
+                <td><label for="beforeSwitch"><input type="checkbox" id="beforeSwitch"> Enable slot on leave before</label></td>
             </tr>
             <tr>
                 <td><label><input type="radio" name="loyalty" value="0"> Don't preserve loyalty</label></td>
