Modularized event chest collection

--- a/iframe.html
+++ b/iframe.html
@@ -38,7 +38,7 @@
             </tr>
             <tr>
                 <td><label for="dailySwitch"><input type="checkbox" id="dailySwitch"> Collect daily reward</label></td>
-				<td><label for="eventChestSwitch"><input type="checkbox" id="eventChestSwitch"> Collect event chests</label></td>
+				<td><label for="eventChestSwitch"><input type="checkbox" id="eventChestSwitch"> Buy event chests</label></td>
                 <td><label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect
                         battlepass</label></td>
                 <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
