--- a/iframe.html
+++ b/iframe.html
@@ -44,8 +44,9 @@
                 <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
             </tr>
             <tr>
+                <td title="This will disable priority lists and enable all unit rarity classes so the auto quester has authority."><label style="color: rgba(255, 0, 0, 0.1)" for="completeQuests"><input type="checkbox" id="completeQuests"><s>Complete campaign related quests (Hover for info)</s></label>
+                </td>
                 <td><label for="priorityListSwitch"><input type="checkbox" id="priorityListSwitch">Enable priority
-                        list</label>
                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label></td>
                 <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label>
                 </td>
