Added switches to allow specific loyalty chest types

--- a/iframe.html
+++ b/iframe.html
@@ -87,6 +87,16 @@
                 <td><label><input type="radio" name="loyalty" value="4"> Preserve if not diamond</label></td>
             </tr>
             <tr>
+                <td><label for="lgoldSwitch"><input type="checkbox" id="lgoldSwitch"> Allow LGold</label></td>
+                <td><label for="lskinSwitch"><input type="checkbox" id="lskinSwitch"> Allow LSkin</label></td>
+                <td><label for="lscrollSwitch"><input type="checkbox" id="lscrollSwitch"> Allow LScroll</label></td>
+            </tr>
+            <tr>
+				<td><label for="ltokenSwitch"><input type="checkbox" id="ltokenSwitch"> Allow LToken</label></td>
+                <td><label for="lbossSwitch"><input type="checkbox" id="lbossSwitch"> Allow LBoss</label></td>
+				<td><label for="lsuperbossSwitch"><input type="checkbox" id="lsuperbossSwitch"> Allow LSuperBoss</label></td>
+            </tr>
+            <tr>
                 <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions allowlist
                         only</label></td>
                 <td><label><input type="radio" name="potion" value="0"> No potions</label></td>
