--- a/iframe.html
+++ b/iframe.html
@@ -44,7 +44,7 @@
                 <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
             </tr>
             <tr>
-                <td title="Not efficient on set markers. This will disable priority lists and enable all unit rarity classes so the auto quester has authority."><label style="color: rgba(255, 0, 0, 0.1)" for="completeQuests"><input type="checkbox" id="completeQuests"><s>Complete campaign related quests (Hover for info)</s></label>
+                <td title="Not efficient on set markers. This will disable priority lists and enable all unit rarity classes so the auto quester has authority."><label for="completeQuests"><input type="checkbox" id="completeQuests">Complete campaign related quests (Hover for info)</label>
                 </td>
                 <td><label for="priorityListSwitch"><input type="checkbox" id="priorityListSwitch">Enable priority
                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label></td>
