--- a/iframe.html
+++ b/iframe.html
@@ -87,14 +87,14 @@
                 <td><label><input type="radio" name="loyalty" value="4"> Preserve if not diamond</label></td>
             </tr>
             <tr>
-                <td><label for="lgoldSwitch"><input type="checkbox" id="lgoldSwitch"> Allow LGold</label></td>
-                <td><label for="lskinSwitch"><input type="checkbox" id="lskinSwitch"> Allow LSkin</label></td>
-                <td><label for="lscrollSwitch"><input type="checkbox" id="lscrollSwitch"> Allow LScroll</label></td>
+                <td><label for="lgoldSwitch"><input type="checkbox" id="lgoldSwitch"> Bypass and allow LGold</label></td>
+                <td><label for="lskinSwitch"><input type="checkbox" id="lskinSwitch"> Bypass and allow LSkin</label></td>
+                <td><label for="lscrollSwitch"><input type="checkbox" id="lscrollSwitch"> Bypass and allow LScroll</label></td>
             </tr>
             <tr>
-				<td><label for="ltokenSwitch"><input type="checkbox" id="ltokenSwitch"> Allow LToken</label></td>
-                <td><label for="lbossSwitch"><input type="checkbox" id="lbossSwitch"> Allow LBoss</label></td>
-				<td><label for="lsuperbossSwitch"><input type="checkbox" id="lsuperbossSwitch"> Allow LSuperBoss</label></td>
+				<td><label for="ltokenSwitch"><input type="checkbox" id="ltokenSwitch"> Bypass and allow LToken</label></td>
+                <td><label for="lbossSwitch"><input type="checkbox" id="lbossSwitch"> Bypass and allow LBoss</label></td>
+				<td><label for="lsuperbossSwitch"><input type="checkbox" id="lsuperbossSwitch"> Bypass and allow LSuperBoss</label></td>
             </tr>
             <tr>
                 <td><label for="favoriteSwitch"><input type="checkbox" id="favoriteSwitch"> Potions allowlist
