Minimum event currency is now dinamic

--- a/iframe.html
+++ b/iframe.html
@@ -13,13 +13,17 @@
     <table>
         <tbody>
             <tr>
-                <td colspan="1"></td>
+                <td colspan="4"></td>
             </tr>
             <tr>
                 <td><label for="reloaderInput">Reloader&nbsp;&nbsp;&nbsp;<input type="number"
                             id="reloaderInput"></label></td>
                 <td><button id="reloaderButton" style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button></td>
-            </tr>
+                    <td><label for="minimumCurrencyInput">Minimum event currency to buy&nbsp;&nbsp;&nbsp;<input type="number"
+                                id="minimumCurrencyInput"></label></td>
+                    <td><button id="minimumCurrencyButton" style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button></td>
+            </tr
+            
             <tr>
                 <td colspan="3"></td>
             </tr>
