--- a/iframe.html
+++ b/iframe.html
@@ -19,7 +19,7 @@
                 <td><label for="reloaderInput">Reloader&nbsp;&nbsp;&nbsp;<input type="number"
                             id="reloaderInput"></label></td>
                 <td><button id="reloaderButton" style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button></td>
-                    <td><label for="minimumCurrencyInput">Minimum event currency to buy&nbsp;&nbsp;&nbsp;<input type="number"
+                    <td><label for="minimumCurrencyInput">Minimum event currency to buy event chests &nbsp;&nbsp;&nbsp;<input type="number"
                                 id="minimumCurrencyInput"></label></td>
                     <td><button id="minimumCurrencyButton" style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button></td>
             </tr
@@ -50,7 +50,7 @@
             <tr>
                 <td title="Not efficient on set markers. This will disable priority lists and enable all unit rarity classes so the auto quester has authority."><label for="completeQuests"><input type="checkbox" id="completeQuests">Complete campaign related quests (Hover for info)</label>
                 </td>
-                <td><label for="priorityListSwitch"><input type="checkbox" id="priorityListSwitch">Enable priority
+                <td><label for="priorityListSwitch"><input type="checkbox" id="priorityListSwitch">Enable unit priority list
                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common units</label></td>
                 <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon units</label>
                 </td>
