Added strings for clarity

--- a/html/log.html
+++ b/html/log.html
@@ -17,6 +17,7 @@
             battle was manually abandoned or the reward chest manually collected.</h2>
         <h2>Duration is the time in minutes from when placement started up to the time the captain handed out the chest
             rewards</h2>
+            <h2>If the initial chest is a loyalty chest, but the awarded chest is a Gold Chest it means you maxed out on that chest type.</h2>
         <div>
             <button id="updateLogButton" class="green_button">Update Log</button>
             <button id="deleteLogButton" class="green_button">Delete log</button>
