amazon unit string correction and also two new switches
two new switches
dungeonLevelSwitch - Place level 10 or lower (or any level flag) on dungeon levels 30 or lower
equipNoDiamondSwitch - Only equip capt skin if not diamond

the first one is intended for late game users (or possibly super early game with a couple lvl30s) since you have to have a sufficient amount of low level units for it to select from

--- a/iframe.html
+++ b/iframe.html
@@ -45,7 +45,10 @@
 				<td><label for="eventChestSwitch"><input type="checkbox" id="eventChestSwitch"> Buy event chests</label></td>
                 <td><label for="battlepassSwitch"><input type="checkbox" id="battlepassSwitch"> Collect
                         battlepass</label></td>
-                <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
+            </tr>
+			<tr>
+				<td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
+				<td><label for="equipNoDiamondSwitch"><input type="checkbox" id="equipNoDiamondSwitch"> Only equip if not diamond</label></td>
             </tr>
             <tr>
                 <td title="Not efficient on set markers. This will disable priority lists and enable all unit rarity classes so the auto quester has authority."><label for="completeQuests"><input type="checkbox" id="completeQuests">Complete campaign related quests (Hover for info)</label>
@@ -69,6 +72,9 @@
                 <td><label for="dungeonSwitch"><input type="checkbox" id="dungeonSwitch"> Unlimited dungeons</label>
                 </td>
             </tr>
+			<tr>
+                <td><label for="dungeonLevelSwitch"><input type="checkbox" id="dungeonLevelSwitch"> Place level 10 or lower (or any level flag) on dungeon levels 30 or lower</label></td>
+			</tr>
             <tr>
                 <td><label for="liveMasterSwitch"><input type="checkbox" id="liveMasterSwitch"> Force live switch to
                         masterlist</label></td>
