--- a/iframe.html
+++ b/iframe.html
@@ -28,8 +28,8 @@
                 </td>
             </tr>
             <tr>
-                <td><label for="minUnitLvlDungInput">Minimum unit level for dungeons&nbsp;&nbsp;&nbsp;<input type="number"
-                            id="minUnitLvlDungInput"></label></td>
+                <td><label for="minUnitLvlDungInput">Minimum unit level for dungeons&nbsp;&nbsp;&nbsp;<input
+                            type="number" id="minUnitLvlDungInput"></label></td>
                 <td><button id="minUnitLvlButton"
                         style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button>
                 </td>
@@ -142,6 +142,19 @@
                 <td><label><input type="radio" name="potion" value="1"> Potions at 45</label></td>
                 <td><label><input type="radio" name="potion" value="2"> Potions at 100</label></td>
             </tr>
+            <tr>
+                <td><label for="dungeonSlotSwitch" class="x"><input type="checkbox" id="dungeonSlotSwitch" class="x" Use slot 0 for dungeons</label></td>
+                <td><label for="skipDungeonSlotSwitch" class="x"><input type="checkbox" id="skipDungeonSlotSwitch" class="x"> Leave slot 0 empty if there are no dungeons</label></td>
+            </tr>
+            <tr>
+                <td><label for="duelsSlotSwitch" class="x"><input type="checkbox" id="duelsSlotSwitch" class="x"> Use slot 1 for duels</label></td>
+                <td><label for="skipDuelsSlotSwitch" class="x"><input type="checkbox" id="skipDuelsSlotSwitch" class="x"> Leave slot 1 empty if there are no duels</label></td>
+            </tr>
+            <tr>
+                <td><label for="clashSlotSwitch" class="x"><input type="checkbox" id="clashSlotSwitch" class="x"> Use slot 2 for Clash</label></td>
+                <td><label for="skipClashSlotSwitch" class="x"><input type="checkbox" id="skipClashSlotSwitch" class="x"> Leave slot 2 empty if there are no clashes</label></td>
+            </tr>
+
         </tbody>
     </table>
 </body>
